compilers Lab/lab 2/evaluation_folder_assign2_publish/Testcases/pass/testCaseCorrect11.java
#define MACROE() (5)
class testCaseCorrect11{
    public static void main(String[] a){
	System.out.println(MACROE());
    }
}

class NotUsed{
    int[] arr;
    public int[] GetArray(){
	return arr;
    }
}