compilers Lab/lab 2/evaluation_folder_assign2_publish/Testcases/fail/testCaseInCorrect13.java
class Test1{
    public static void main(String[] a){
	System.out.println(new N().foo());
    }
}

class N{
    boolean[] arr; // Error
    public int foo(){
	return 0;
    }
}
